Tinker with design

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,18 +5,21 @@
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
-
-    // Positioning context for the mobile navigation icon
     position: relative;
 }
-
+.my-logo {
+	svg {
+		opacity: 0.2;
+		z-index: -1;
+		position: fixed;
+	}
+}
 .site-title {
     font-size: 26px;
     font-weight: 300;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
-    float: left;
 
     &,
     &:visited {
