--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,18 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
+
+    <hr>
+    <h2>Categories</h2>
+      <ul>
+      {% for category in page.categories %}
+        <li>
+          <a href="/categories/#{{category | split: ' ' | join: '+'}}">{{ category }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+    <hr>
+
   </div>
 
 </article>
