--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,21 @@
     {% include header.html %}
 
     <div class="page-content">
+      <div class="image">
+        <a href="#" class="menu-icon">
+          <img src="https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/rezaincorsica.jpg">
+        </a>
+      </div>
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
+
+    <!-- <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div> -->
 
     {% include footer.html %}
 
