--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,35 @@
+/* Custome */
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 1.2;
+  letter-spacing: 1.75px;
+  word-spacing: 3px;
+}
+
+.page-content {
+  .image {
+    -webkit-box-shadow: inset 0px 0px 400px #000;
+    -moz-box-shadow:    inset 0px 0px 400px #000;
+    box-shadow:         inset 0px 0px 400px #000;
+    line-height: 0;         /* ensure no space between bottom */
+    display: inline-block;  /* don't go wider than image */
+    margin: 0 0 $spacing-unit * 2 0;
+  }
+  .image img {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    width: 100%;
+    position: relative;
+    z-index: -1;            /* position beneath */
+  }
+
+  .content {
+    padding: 50px;
+  }
+}
+
 /**
  * Site header
  */
@@ -7,13 +39,7 @@
     min-height: 56px;
     position: relative;
 }
-.my-logo {
-	svg {
-		opacity: 0.1;
-		z-index: -1;
-		position: fixed;
-	}
-}
+
 .site-title {
     font-size: 26px;
     font-weight: 300;
@@ -171,7 +197,7 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+    // padding: $spacing-unit 0;
 }
 
 .page-heading {
