--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <div class="page-content">
       <div class="image">
         <a href="#" class="menu-icon">
-          <img src="https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/rezaincorsicabw.jpg.jpg">
+          <img src="https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/rezaincorsicabw.jpg">
         </a>
       </div>
       <div class="wrapper">
