--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@ body {
   .image {
     /* -webkit-box-shadow: inset 0px 0px 400px #000; */
     /* -moz-box-shadow:    inset 0px 0px 400px #000; */
-    box-shadow:         inset 0px 0px 400px #000;
+    /* box-shadow:         inset 0px 0px 400px #000; */
     line-height: 0;         /* ensure no space between bottom */
     display: inline-block;  /* don't go wider than image */
     margin: 0 0 $spacing-unit * 2 0;
