--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <div class="page-content">
       <div class="image">
         <a href="#" class="menu-icon">
-          <img src="https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/rezaincorsica.jpg">
+          <img src="https://raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/hanuman.png">
         </a>
       </div>
       <div class="wrapper">
@@ -18,11 +18,11 @@
       </div>
     </div>
 
-    <!-- <div class="page-content">
+    <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
-    </div> -->
+    </div>
 
     {% include footer.html %}
 
