--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,6 +16,10 @@ body {
     line-height: 0;         /* ensure no space between bottom */
     display: inline-block;  /* don't go wider than image */
     margin: 0 0 $spacing-unit * 2 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .image img {
     -webkit-filter: grayscale(100%);
