Remove double content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
       </div>
     </div>
 
-    <div class="page-content">
+    <!-- <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
-    </div>
+    </div> -->
 
     {% include footer.html %}
 
