--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,38 +2,62 @@
 body {
   margin: 0;
   padding: 0;
-  font-size: 24px;
-  line-height: 1.2;
-  letter-spacing: 1.75px;
-  word-spacing: 3px;
+  font-family: 'Raleway', sans-serif;
 }
 
-.page-content {
-  .image {
-    /* -webkit-box-shadow: inset 0px 0px 400px #000; */
-    /* -moz-box-shadow:    inset 0px 0px 400px #000; */
-    /* box-shadow:         inset 0px 0px 400px #000; */
-    line-height: 0;         /* ensure no space between bottom */
-    display: inline-block;  /* don't go wider than image */
-    margin: 0 0 $spacing-unit * 2 0;
+.content {
+  background: #FFF;
+  height: 4000px;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .image img {
-    // -webkit-filter: grayscale(100%);
-    // filter: grayscale(100%);
-    margin: 50px 0 0 0;
+    .navigation {
+        position: absolute;
+        top: 1px;
+        left: 0px;
+        width: 100%;
+        z-index: 1;
+        background: rgba(255, 255, 255, 0.65);
+        text-align: center;
+
+        .menu {
+            padding: 10px 0 0 0;
+
+            li {
+                text-transform: uppercase;
+                display: inline;
+                padding: 0 0.5rem;
+
+                a {
+                    font-size: 1rem !important;
+                }
+            }
+        }
+
+    }
+
+
+  .splash {
+    background: url("//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/rio1.jpg") center no-repeat;
+    background-size: cover;
     width: 100%;
+    height: 100vh;
     position: relative;
-    z-index: -1;            /* position beneath */
-  }
 
-  .content {
-    padding: 50px;
+    .scrimview {
+      width: 100%;
+      height: 100vh;
+      background: rgba(255, 255, 255, 0.25);
+    }
+
+    .greetings {
+      font-size: 5rem;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
+
 
 /**
  * Site header
@@ -41,7 +65,7 @@ body {
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+    // min-height: 56px;
     position: relative;
 }
 
@@ -206,7 +230,8 @@ body {
 }
 
 .page-heading {
-    font-size: 20px;
+    padding: 3rem 0 0 0;
+    font-size: 3rem;
 }
 
 .post-list {
@@ -238,7 +263,8 @@ body {
 }
 
 .post-title {
-    font-size: 42px;
+    padding: 3rem 0 0 0;
+    font-size: 3rem;
     letter-spacing: -1px;
     line-height: 1;
 
