--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -163,16 +163,20 @@ pre {
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
+    padding-right: 2rem;
+    padding-left: 2rem;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
+        // padding-right: $spacing-unit / 2;
+        // padding-left: $spacing-unit / 2;
     }
+
+    // .home {
+    //     padding: 0 2rem;
+    // }
 }
 
 
