--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,7 +7,7 @@ body {
 
 .content {
   background: #FFF;
-  height: 4000px;
+  padding-bottom: 15rem;
 
     .navigation {
         position: absolute;
