--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -91,18 +91,19 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $brand-color;
+    color: #087b64 !important;
     text-decoration: none;
     font-size: 2rem !important;
 
     &:visited {
+        color: #087b64 !important;
         //color: darken($brand-color, 15%);
-        color: $text-color;
+        //color: $text-color;
+        //color: $brand-color;
     }
 
     &:hover {
-        //color: $text-color;
-        color: #16a085 !important;
+        color: $text-color !important;
         text-decoration: none;
     }
 }
