--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <ul class="menu">
       <li><a href="/about/">About</a></li>
       <li><a href="/#">Blog</a></li>
-      <li><a href="/categories/">Categories</a></li>
+      <li><a href="/categories/">Blog Categories</a></li>
     </ul>
   </div>
 
