--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,6 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
-   <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:600" rel="stylesheet">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 </head>
