--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,7 @@ strong {
   padding-bottom: 15rem;
 
     .navigation {
-        position: absolute;
+        // position: absolute;
         top: 1px;
         left: 0px;
         width: 100%;
@@ -68,7 +68,7 @@ strong {
  */
 .site-header {
     border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    // border-bottom: 1px solid $grey-color-light;
     // min-height: 56px;
     position: relative;
 }
