--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,30 +4,18 @@
   <body>
     <div class="content">
       {% include header.html %}
-      <div class="splash">
+
+      <!-- <div class="splash">
         <div class="scrimview"></div>
         <div class="greetings">
           <p>ola, i'm smith.</p>
         </div>
-      </div>
+      </div> -->
 
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
-
     {% include footer.html %}
-
-    <script type="text/javascript">
-      var smoothsteptime = function(){
-        $(function(){
-            $('html, body').animate({
-                scrollTop: $('.post-title').offset().top
-            }, 250);
-            return false;
-        });
-      };
-      setTimeout(smoothsteptime, 500);
-    </script>
   </body>
 </html>
