--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,9 @@
 <header class="site-header">
-
   <div class="navigation">
     <ul class="menu">
-      <li><a href="/#">Blog</a></li>
+      <li><a href="/#">Home</a></li>
+      <li><a href="/writings/">Articles</a></li>
       <li><a href="/categories/">Categories</a></li>
-      <li><a href="/about/">About</a></li>
     </ul>
   </div>
-
 </header>
