--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,6 @@
         {{ content }}
       </div>
     </div>
-    {% include footer.html %}
+    <!-- {% include footer.html %} -->
   </body>
 </html>
