docs(index): Update the index; Play around with moving the menu.
Update the index; Play around with moving the menu into the main index.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,10 @@
   {% include head.html %}
   <body>
     <div class="content">
-      {% include header.html %}
+      <!-- {% include header.html %} -->
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
-    <!-- {% include footer.html %} -->
   </body>
 </html>
