--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,14 @@
-.avatar {
-  width: 40px;
-  height: 40px;
+---
+# Only the main Sass file needs front matter (the dashes are enough)
+---
+
+%vertical-rhythm {
+    margin-bottom: 30px / 2;
+    margin-bottom: 0;
 }
+
+// Import partials from `sass_dir` (defaults to `_sass`)
+@import
+  "layout",
+  "syntax-highlighting"
+;
