--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,22 @@
+body {
+  font-family: "Courier New";
+  font-size: 12px;
+}
+
 .avatar {
-  width: 68px;
-  height: 68px;
-  border-radius: 68px;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
   float: left;
   margin: 0px 15px 0px 0px;
+}
+
+.media-object {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 250px;
+  height: 100px;
+  /*background-color: pink;*/
 }
