feat(index): Add treat and restyle media object

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,22 +1,101 @@
 body {
   font-family: "Courier New";
-  font-size: 12px;
+  font-size: 14px;
+
+   a:visited {
+    color: #367588;
+  }
+
+  .avatar {
+    width: 175px;
+    height: 175px;
+    border-radius: 100%;
+    float: left;
+    margin: 0px 15px 0px 0px;
+    filter: grayscale(100%);
+
+    &:hover {
+      filter: grayscale(0%);
+      transition: all 300ms ease-in-out;
+    }
+  }
+
+  .media-object {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+    width: 500px;
+    height: 100px;
+  }
+
+  .special-treat {
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+  }
 }
 
-.avatar {
-  width: 175px;
-  height: 175px;
-  border-radius: 100%;
-  float: left;
-  margin: 0px 15px 0px 0px;
+
+
+@media (max-width : 520px) {
+  body {
+    font-size: 18px;
+
+    .avatar {
+      border-radius: 3px;
+      float: none;
+    }
+
+    .media-object {
+      width: unset;
+      float: none;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      transform: translate(0%, 0%);
+      padding: 10px;
+    }
+  }
 }
 
-.media-object {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  height: 100px;
-  /*background-color: pink;*/
+
+@keyframes spin {
+  100% {transform: rotate(1turn); }
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
