--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,12 +12,6 @@ body {
     border-radius: 100%;
     float: left;
     margin: 0px 15px 0px 0px;
-    filter: grayscale(100%);
-
-    &:hover {
-      filter: grayscale(0%);
-      transition: all 300ms ease-in-out;
-    }
   }
 
   .media-object {
@@ -30,17 +24,23 @@ body {
   }
 
   .special-treat {
-    position: fixed;
+    position: absolute;
     bottom: 20px;
-    left: 30px;
+    left: 20px;
   }
 }
 
-
-
 @media (max-width : 520px) {
   body {
-    font-size: 18px;
+    font-size: 16px;
+
+    H1 {
+      margin: 4px 0 0 0;
+    }
+
+    p {
+      margin: 12px 0 0 0;
+    }
 
     .avatar {
       border-radius: 3px;
@@ -51,51 +51,10 @@ body {
       width: unset;
       float: none;
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: 10px;
+      left: 10px;
       transform: translate(0%, 0%);
       padding: 10px;
     }
-  }
-}
-
-
-@keyframes spin {
-  100% {transform: rotate(1turn); }
-}
-
-@keyframes shake {
-  0% {
-    transform: translate(1px, 1px) rotate(0deg);
-  }
-  10% {
-    transform: translate(-1px, -2px) rotate(-1deg);
-  }
-  20% {
-    transform: translate(-3px, 0px) rotate(1deg);
-  }
-  30% {
-    transform: translate(3px, 2px) rotate(0deg);
-  }
-  40% {
-    transform: translate(1px, -1px) rotate(1deg);
-  }
-  50% {
-    transform: translate(-1px, 2px) rotate(-1deg);
-  }
-  60% {
-    transform: translate(-3px, 1px) rotate(0deg);
-  }
-  70% {
-    transform: translate(3px, 1px) rotate(-1deg);
-  }
-  80% {
-    transform: translate(-1px, -1px) rotate(1deg);
-  }
-  90% {
-    transform: translate(1px, 2px) rotate(0deg);
-  }
-  100% {
-    transform: translate(1px, -2px) rotate(-1deg);
   }
 }
