docs(Add more weird videos):

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,10 @@
         {title: "Cincinnati Chili Spaghetti & Coney Dog (Skyline vs. Gold Star)", url: 'https://www.youtube.com/watch?v=4lsnnpQaSuM'},
         {title: "Skyline 3 Way Chili Spaghetti", url: 'https://www.youtube.com/watch?v=-EVGT_83xJg'},
         {title: "Hot Dog with Spicy Meat Sauce Recipe", url: 'https://www.youtube.com/watch?v=4aDZ0yT5agM'},
-        {title: "Dinty Moore's 1990 Ad", url: 'https://www.youtube.com/watch?v=ky33W2QQjWo&index=6&list=WL&t=0s'},
+        {title: "Dinty Moore's 1990 Ad", url: 'https://www.youtube.com/watch?v=ky33W2QQjWo'},
+        {title: "Dinty Moore's 1994 Ad", url: 'https://www.youtube.com/watch?v=VJdaKA7b0jY'},
+        {title: "Pork Brains & Eggs", url: 'https://www.youtube.com/watch?v=h9KWgp8Jmpw'},
+
       ];
       var treatSelector = document.querySelector('.treat');
       treatSelector.onclick = function() {
