docs(personality copy): Update copy for personality section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,11 +30,10 @@
       var randomWeekendActivities = [
         {title: "knit & crochet", url: 'https://www.instagram.com/p/BtHSfozg1Mh/'},
         {title: "do hot process soap-making", url: 'https://www.instagram.com/p/BarKC8EDo87/'},
-        {title: "do candle making", url: '#'},
+        {title: "make candles", url: '#'},
         {title: "row on my erg", url: '#'},
         {title: "casually hike", url: 'https://www.instagram.com/p/3W7XSuAalJ/'},
         {title: "do tissue art in random bathrooms", url: 'https://www.instagram.com/p/BPdeWcJBJT3/'},
-        {title: "grab drinks", url: 'https://www.instagram.com/p/Bk3xYxaFwQd/'},
         {title: "organize my Carmex collection", url: 'https://www.instagram.com/p/BYFXAugDQ3i/'},
         {title: "work on my secret business plan", url: '#'},
         {title: "bake short bread", url: 'https://www.instagram.com/p/Bsn3AMSg9NX/'},
