refactor(avatar): Randomize avatar & update copy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       var randomWeekendActivities = [
         {title: "knit & crochet", url: 'https://www.instagram.com/p/BtHSfozg1Mh/'},
         {title: "do hot process soap-making", url: 'https://www.instagram.com/p/BarKC8EDo87/'},
-        {title: "make candles", url: '#'},
+        {title: "make candles", url: 'https://www.instagram.com/p/BuzWNQ6HVc_/'},
         {title: "row on my erg", url: '#'},
         {title: "casually hike", url: 'https://www.instagram.com/p/3W7XSuAalJ/'},
         {title: "do tissue art in random bathrooms", url: 'https://www.instagram.com/p/BPdeWcJBJT3/'},
@@ -44,6 +44,17 @@
       var randomWeekendIndex = Math.floor(Math.random() * randomWeekendActivities.length - 1) + 1;
       weekendSelector.innerText = randomWeekendActivities[randomWeekendIndex].title
       weekendSelector.href = randomWeekendActivities[randomWeekendIndex].url;
+
+      var randomAvatar = [
+        {url: '//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me.jpg'},
+        {url: '//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me1.jpg'},
+        {url: '//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me2.png'},
+        {url: '//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me4.jpg'},
+        {url: '//raw.githubusercontent.com/seimith/seimith.github.io/master/_assets/me5.png'},
+      ];
+      var avatarSelector = document.querySelector('.avatar');
+      var randomIndex = Math.floor(Math.random() * randomAvatar.length - 1) + 1;
+      avatarSelector.src=randomAvatar[randomIndex].url;
     </script>
   </body>
 </html>
