--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -20,7 +20,11 @@ body {
     left: 50%;
     transform: translate(-50%, -40%);
     width: 500px;
-    height: 100px;
+    height: 175px;
+
+    h1 {
+      margin-top: 5px;
+    }
   }
 
   .special-treat {
